--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ LazyData: true
 RoxygenNote: 7.1.0
 URL: https://github.com/EddieYang211/powerLATE
 BugReports: https://github.com/EddieYang211/powerLATE/issues
+Suggests: 
+    covr
