--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ language: R
 cache: packages
 warnings_are_errors: true
 
+before_install:
+  - tlmgr install BasicTeX
+  
 os:
   - linux
   - osx
@@ -12,6 +15,6 @@ r:
   - 3.4
   - release
   - devel
-  
+
 after_success:
   - Rscript -e 'covr::codecov(type = "all")'
